--- a/index.html
+++ b/index.html
@@ -21,56 +21,63 @@
 
 <body>
 
-  <section class="paralax-Img01">
+  <header class="paralax-Img01">
     <nav class="navbar navbar-expand-lg navbar-custom" id="header">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="navbar-brand" src="assets/logo.jpg" alt="imagem logo" ></a>
-            <button class="navbar-toggler" type="button" style="background-color: rgba(255, 255, 255, 0.908);"
-                data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="navbar-brand" src="assets/logo.jpg" alt="imagem logo"></a>
+        <button class="navbar-toggler" type="button" style="background-color: rgba(255, 255, 255, 0.908);"
+          data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav nav-item-2">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#" style="color: white;">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu nav-item-3">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          <div>
+            <button class="btn btn-primary button-nav-paralax" type="submit">Button</button>
+            <button id="theme-toggle" style="background-color: white;" class="btn" aria-label="Alterar tema">
+              <i class="fas fa-sun"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav nav-item-2">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" style="color: white;">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu nav-item-3">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <button class="btn btn-primary button-nav-paralax" type="submit">Button</button>
-                <button id="theme-toggle" style="background-color: white;" class="btn" aria-label="Alterar tema">
-                    <i class="fas fa-sun"></i>
-                </button>
-            </div>
+          </div>
+        </div>
     </nav>
-    <div class="btn-contato">
-        <a href="#"><button>Contato</button></a>
+    <div class="paralax-text01">
+      <h3 class="text-start paralax-h3">Equipe de advogados prontos para qualquer situação</h3>
+      <h5 class="text-start paralax-h3">Obtenha aconselhamento jurídico de nossos advogados experientes</h5>
+      <div class="container-button-paralax">
+        <button type="button" class="btn  btn-outline-secondary fs-4 text-white btn-paralax-bottom fw-semibold">Fale Conosco</button>
+        <button type="button" class="btn btn-outline-success fs-4 text-white btn-paralax-bottom fw-semibold">Area de Atuação</button>
+      </div>
+
     </div>
-    <div class="paralax-text01 text-center">
-        <p class="paralax-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <h3 class="paralax-title">Lorem ipsum dolor sit.</h3>
-        <h2 class="paralax-text1">Com a doçura do novo tempo, o bosque se cobre de folhas...</h2>
-        <div class="container-button-paralax"></div>
-    </div>
-</section>
+  </header>
+
+  <div class="container call">
+    <h1>
+      jasdklsajdksald
+    </h1>
+    <h2>djaksldjaslkdjaskld</h2>
+  </div>
 
   <nav class="navbar mt-25 navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -476,18 +483,6 @@
     </div>
   </section>
 
-
-  <!------coockies-rules------->
-  <div id="cookie-banner" class="cookie-banner"
-    style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #333; color: #fff; padding: 10px; text-align: center;">
-    Este site usa cookies para melhorar sua experiência.
-    <button id="accept-cookies"
-      style="margin-left: 10px; padding: 5px 10px; background-color: #28a745; color: #fff; border: none; cursor: pointer;">Aceitar</button>
-    <button id="decline-cookies"
-      style="margin-left: 10px; padding: 5px 10px; background-color: #dc3545; color: #fff; border: none; cursor: pointer;">Recusar</button>
-  </div>
-
-    <!------footer-area------->
   <footer class="bg-dark text-white pt-5">
     <div class="container">
       <div class="row">
