--- a/index.html
+++ b/index.html
@@ -65,18 +65,76 @@
       <h3 class="text-start paralax-h3">Equipe de advogados prontos para qualquer situação</h3>
       <h5 class="text-start paralax-h3">Obtenha aconselhamento jurídico de nossos advogados experientes</h5>
       <div class="container-button-paralax">
-        <button type="button" class="btn  btn-outline-secondary fs-4 text-white btn-paralax-bottom fw-semibold">Fale Conosco</button>
-        <button type="button" class="btn btn-outline-success fs-4 text-white btn-paralax-bottom fw-semibold">Area de Atuação</button>
+        <button type="button" class="btn  btn-outline-secondary fs-4 text-white btn-paralax-bottom fw-semibold">Fale
+          Conosco</button>
+        <button type="button" class="btn btn-outline-success fs-4 text-white btn-paralax-bottom fw-semibold">Area de
+          Atuação</button>
       </div>
 
     </div>
   </header>
 
-  <div class="container call">
-    <h1>
-      jasdklsajdksald
-    </h1>
-    <h2>djaksldjaslkdjaskld</h2>
+  <div class="showcase">
+    <div class="showcase-title">
+      <h3 class="font-weight-bolder">Áreas de Atuação</h3>
+      <h4 class="lead display-5">Nossas Áreas de Atuação</h4>
+    </div>
+    <div class="showcase-card-container">
+      <ul class="showcase-card-container">
+        <a style="text-decoration: none;color: inherit; " href="#">
+          <li class="showcase-card">
+            <p><i class="fas fa-building fa-4x"></i></p>
+            <h2>Administrativo</h2>
+            <p class="showcase-txt-p">O escritório atua também na área do Direito Administrativo, oferecendo consultoria e representação em
+              processos administrativos e judiciais. </p>
+            <button type="button" class="btn btn-outline-success">Saiba Mais</button>
+          </li>
+        </a>
+        <a style="text-decoration: none;color: inherit; " href="#">
+          <li class="showcase-card">
+            <p><i class="fas fa-building fa-4x"></i></p>
+            <h2>Família e Sucessões</h2>
+            <p>O escritório atua também na área de Família e Sucessão, oferecendo suporte jurídico em questões como
+              divórcios, guarda de filhos, pensão alimentícia, inventários, e testamentos. </p>
+            <button type="button" class="btn btn-outline-success">Saiba Mais</button>
+          </li>
+        </a>
+        <a style="text-decoration: none;color: inherit; " href="#">
+          <li class="showcase-card">
+            <p><i class="fas fa-building fa-4x"></i></p>
+            <h2>Consumidor</h2>
+            <p>O escritório atua também na área do direito do consumidor, oferecendo assistência em casos que envolvem
+              relações de consumo, como publicidade enganosa, qualidade de produtos e serviços, e cláusulas abusivas em
+              contratos. </p>
+            <button type="button" class="btn btn-outline-success">Saiba Mais</button>
+          </li>
+        </a>
+        <a style="text-decoration: none;color: inherit; " href="#">
+          <li class="showcase-card">
+            <p><i class="fas fa-building fa-4x"></i></p>
+            <h2>Civil</h2>
+            <p>Escritório atua de forma preventiva e contenciosa, na esfera judicial e extrajudicial. O âmbito do direito civil engloba casos que envolvam direito de família (divorcio/partilha/união estável/guarda/alimentos/paternidade) e sucessões (inventario/arrolamento), assim como relações de consumo (CDC), responsabilidade civil, execução, cobrança e contratos de maneira geral. </p>
+            <button type="button" class="btn btn-outline-success">Saiba Mais</button>
+          </li>
+        </a>
+        <a style="text-decoration: none;color: inherit; " href="#">
+          <li class="showcase-card">
+            <p><i class="fas fa-building fa-4x"></i></p>
+            <h2>Trabalhista</h2>
+            <p>O Escritório também atua no âmbito do Direito do Trabalho, de forma preventiva, oferecendo acessoria jurídica, bem como de forma contenciosa, através do ajuizamento ou defesa de ações trabalhistas, visando sempre o melhor para o cliente, seja ele empregado ou empregador. </p>
+            <button type="button" class="btn btn-outline-success">Saiba Mais</button>
+          </li>
+        </a>
+        <a style="text-decoration: none;color: inherit; " href="#">
+          <li class="showcase-card">
+            <p><i class="fas fa-building fa-4x"></i></p>
+            <h2>Penal</h2>
+            <p>.O Escritório atua no âmbito do direito penal, desde o acompanhamento de depoimentos na delegacia, inquéritos policiais, bem como ajuizamento de queixa crime e defesas processuais, do início ao fim do processo, com plena competência. </p>
+            <button type="button" class="btn btn-outline-success">Saiba Mais</button>
+          </li>
+        </a>
+      </ul>
+    </div>
   </div>
 
   <nav class="navbar mt-25 navbar-expand-lg bg-body-tertiary">
@@ -482,6 +540,18 @@
       </div>
     </div>
   </section>
+
+  <!------coockies-rules------->
+  <div id="cookie-banner" class="cookie-banner"
+    style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #333; color: #fff; padding: 10px; text-align: center;">
+    Este site usa cookies para melhorar sua experiência.
+    <button id="accept-cookies"
+      style="margin-left: 10px; padding: 5px 10px; background-color: #28a745; color: #fff; border: none; cursor: pointer;">Aceitar</button>
+    <button id="decline-cookies"
+      style="margin-left: 10px; padding: 5px 10px; background-color: #dc3545; color: #fff; border: none; cursor: pointer;">Recusar</button>
+  </div>
+
+  <!------footer-area------->
 
   <footer class="bg-dark text-white pt-5">
     <div class="container">
