--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <ul class="showcase-card-container">
         <a style="text-decoration: none;color: inherit; " href="#">
           <li class="showcase-card">
-            <p><i class="fas fa-building fa-4x"></i></p>
+            <p><i class="fas fa-briefcase text-gold fa-4x"></i></p>
             <h2>Administrativo</h2>
             <p class="showcase-txt-p">O escritório atua também na área do Direito Administrativo, oferecendo consultoria e representação em
               processos administrativos e judiciais. </p>
@@ -92,18 +92,18 @@
         </a>
         <a style="text-decoration: none;color: inherit; " href="#">
           <li class="showcase-card">
-            <p><i class="fas fa-building fa-4x"></i></p>
+            <p><i class="fas fa-user-friends text-gold  fa-4x"></i></p>
             <h2>Família e Sucessões</h2>
-            <p>O escritório atua também na área de Família e Sucessão, oferecendo suporte jurídico em questões como
+            <p class="showcase-txt-p">O escritório atua também na área de Família e Sucessão, oferecendo suporte jurídico em questões como
               divórcios, guarda de filhos, pensão alimentícia, inventários, e testamentos. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
         <a style="text-decoration: none;color: inherit; " href="#">
           <li class="showcase-card">
-            <p><i class="fas fa-building fa-4x"></i></p>
+            <p><i class="fas fa-shopping-cart  text-gold fa-4x"></i></p>
             <h2>Consumidor</h2>
-            <p>O escritório atua também na área do direito do consumidor, oferecendo assistência em casos que envolvem
+            <p class="showcase-txt-p">O escritório atua também na área do direito do consumidor, oferecendo assistência em casos que envolvem
               relações de consumo, como publicidade enganosa, qualidade de produtos e serviços, e cláusulas abusivas em
               contratos. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
@@ -111,32 +111,32 @@
         </a>
         <a style="text-decoration: none;color: inherit; " href="#">
           <li class="showcase-card">
-            <p><i class="fas fa-building fa-4x"></i></p>
+            <p><i class="fas fa-gavel  text-gold fa-4x"></i></p>
             <h2>Civil</h2>
-            <p>Escritório atua de forma preventiva e contenciosa, na esfera judicial e extrajudicial. O âmbito do direito civil engloba casos que envolvam direito de família (divorcio/partilha/união estável/guarda/alimentos/paternidade) e sucessões (inventario/arrolamento), assim como relações de consumo (CDC), responsabilidade civil, execução, cobrança e contratos de maneira geral. </p>
+            <p class="showcase-txt-p">Escritório atua de forma preventiva e contenciosa, na esfera judicial e extrajudicial. O âmbito do direito civil engloba casos que envolvam direito de família (divorcio/partilha/união estável/guarda/alimentos/paternidade) e sucessões (inventario/arrolamento), assim como relações de consumo (CDC), responsabilidade civil, execução, cobrança e contratos de maneira geral. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
         <a style="text-decoration: none;color: inherit; " href="#">
           <li class="showcase-card">
-            <p><i class="fas fa-building fa-4x"></i></p>
+            <p><i class="fas fa-users  text-gold fa-4x"></i></p>
             <h2>Trabalhista</h2>
-            <p>O Escritório também atua no âmbito do Direito do Trabalho, de forma preventiva, oferecendo acessoria jurídica, bem como de forma contenciosa, através do ajuizamento ou defesa de ações trabalhistas, visando sempre o melhor para o cliente, seja ele empregado ou empregador. </p>
+            <p class="showcase-txt-p">O Escritório também atua no âmbito do Direito do Trabalho, de forma preventiva, oferecendo acessoria jurídica, bem como de forma contenciosa, através do ajuizamento ou defesa de ações trabalhistas, visando sempre o melhor para o cliente, seja ele empregado ou empregador. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
         <a style="text-decoration: none;color: inherit; " href="#">
           <li class="showcase-card">
-            <p><i class="fas fa-building fa-4x"></i></p>
+            <p><i class="fa fa-balance-scale text-gold fa-4x"></i></p>
             <h2>Penal</h2>
-            <p>.O Escritório atua no âmbito do direito penal, desde o acompanhamento de depoimentos na delegacia, inquéritos policiais, bem como ajuizamento de queixa crime e defesas processuais, do início ao fim do processo, com plena competência. </p>
+            <p class="showcase-txt-p">O Escritório atua no âmbito do direito penal, desde o acompanhamento de depoimentos na delegacia, inquéritos policiais, bem como ajuizamento de queixa crime e defesas processuais, do início ao fim do processo, com plena competência. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
       </ul>
     </div>
   </div>
-
+<!--
   <nav class="navbar mt-25 navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" aria-label="Ir para a página inicial">
@@ -177,8 +177,8 @@
       </div>
     </div>
   </nav>
-  <!--End-Navigation-->
-
+  End-Navigation-->
+<!--
   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000"
     data-bs-wrap="true">
     <div class="carousel-indicators">
@@ -221,7 +221,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <!--End-Carroucel-->
+  End-Carroucel-->
 
   <div class="container  cards-grid">
     <div class="card">
@@ -317,7 +317,27 @@
     <div class="cta-card-text1">Texto do Cartão</div>
   </div>
 
-
+  <!-- Parallax-->
+  <section class="paralax-Img01" id="palaralax-02">
+    <div class="paralax-text01">
+      <p class="paralax-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <h3 class="paralax-title">Lorem ipsum dolor sit .</h3>
+      <h2 class="paralax-text1">Com a doçura do novo tempo,
+        o bosque se cobre de folhas, e os pássaros
+        cantam, cada um em seu latim,
+        conforme o verso do novo canto,
+        quando está bem que cada um se torne
+        aquilo que mais deseja.1</h2>
+      <div class="container-button-paralax">
+        <button class="button1-paralax">
+          Solicitar orçamento
+        </button>
+        <button class="button2-paralax">
+          (11) 9-9999-9999
+        </button>
+      </div>
+    </div>
+  </section>
   <!-- faq-container1-->
   <div class="questions shadow-lg my-4 p-3 rounded-10 display-questions">
     <div class="text-center">
@@ -596,6 +616,7 @@
       <p class="text-center mt-3">© 2024 Advocacia Trabalhista LTDA - Todos os direitos reservados.</p>
     </div>
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
