--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     <nav class="navbar navbar-expand-lg navbar-custom" id="header">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img class="navbar-brand" src="assets/logo.jpg" alt="imagem logo"></a>
-        <button class="navbar-toggler" type="button" style="background-color: rgba(255, 255, 255, 0.908);"
-          data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-          aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler menu-humburguer" type="button"
+          style="background-color: rgba(255, 255, 255, 0.908);" data-bs-toggle="collapse"
+          data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav nav-item-2">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#" style="color: white;">Home</a>
+              <a class="nav-link active" aria-current="page" href="#" style="color: white;">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
@@ -73,7 +74,9 @@
 
     </div>
   </header>
+  <!--end-header-1-->
 
+  <!--showcase-1-->
   <div class="showcase">
     <div class="showcase-title">
       <h3 class="font-weight-bolder">Áreas de Atuação</h3>
@@ -85,7 +88,8 @@
           <li class="showcase-card">
             <p><i class="fas fa-briefcase text-gold fa-4x"></i></p>
             <h2>Administrativo</h2>
-            <p class="showcase-txt-p">O escritório atua também na área do Direito Administrativo, oferecendo consultoria e representação em
+            <p class="showcase-txt-p">O escritório atua também na área do Direito Administrativo, oferecendo consultoria
+              e representação em
               processos administrativos e judiciais. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
@@ -94,7 +98,8 @@
           <li class="showcase-card">
             <p><i class="fas fa-user-friends text-gold  fa-4x"></i></p>
             <h2>Família e Sucessões</h2>
-            <p class="showcase-txt-p">O escritório atua também na área de Família e Sucessão, oferecendo suporte jurídico em questões como
+            <p class="showcase-txt-p">O escritório atua também na área de Família e Sucessão, oferecendo suporte
+              jurídico em questões como
               divórcios, guarda de filhos, pensão alimentícia, inventários, e testamentos. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
@@ -103,7 +108,8 @@
           <li class="showcase-card">
             <p><i class="fas fa-shopping-cart  text-gold fa-4x"></i></p>
             <h2>Consumidor</h2>
-            <p class="showcase-txt-p">O escritório atua também na área do direito do consumidor, oferecendo assistência em casos que envolvem
+            <p class="showcase-txt-p">O escritório atua também na área do direito do consumidor, oferecendo assistência
+              em casos que envolvem
               relações de consumo, como publicidade enganosa, qualidade de produtos e serviços, e cláusulas abusivas em
               contratos. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
@@ -113,7 +119,11 @@
           <li class="showcase-card">
             <p><i class="fas fa-gavel  text-gold fa-4x"></i></p>
             <h2>Civil</h2>
-            <p class="showcase-txt-p">Escritório atua de forma preventiva e contenciosa, na esfera judicial e extrajudicial. O âmbito do direito civil engloba casos que envolvam direito de família (divorcio/partilha/união estável/guarda/alimentos/paternidade) e sucessões (inventario/arrolamento), assim como relações de consumo (CDC), responsabilidade civil, execução, cobrança e contratos de maneira geral. </p>
+            <p class="showcase-txt-p">Escritório atua de forma preventiva e contenciosa, na esfera judicial e
+              extrajudicial. O âmbito do direito civil engloba casos que envolvam direito de família
+              (divorcio/partilha/união estável/guarda/alimentos/paternidade) e sucessões (inventario/arrolamento), assim
+              como relações de consumo (CDC), responsabilidade civil, execução, cobrança e contratos de maneira geral.
+            </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
@@ -121,7 +131,9 @@
           <li class="showcase-card">
             <p><i class="fas fa-users  text-gold fa-4x"></i></p>
             <h2>Trabalhista</h2>
-            <p class="showcase-txt-p">O Escritório também atua no âmbito do Direito do Trabalho, de forma preventiva, oferecendo acessoria jurídica, bem como de forma contenciosa, através do ajuizamento ou defesa de ações trabalhistas, visando sempre o melhor para o cliente, seja ele empregado ou empregador. </p>
+            <p class="showcase-txt-p">O Escritório também atua no âmbito do Direito do Trabalho, de forma preventiva,
+              oferecendo acessoria jurídica, bem como de forma contenciosa, através do ajuizamento ou defesa de ações
+              trabalhistas, visando sempre o melhor para o cliente, seja ele empregado ou empregador. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
@@ -129,14 +141,96 @@
           <li class="showcase-card">
             <p><i class="fa fa-balance-scale text-gold fa-4x"></i></p>
             <h2>Penal</h2>
-            <p class="showcase-txt-p">O Escritório atua no âmbito do direito penal, desde o acompanhamento de depoimentos na delegacia, inquéritos policiais, bem como ajuizamento de queixa crime e defesas processuais, do início ao fim do processo, com plena competência. </p>
+            <p class="showcase-txt-p">O Escritório atua no âmbito do direito penal, desde o acompanhamento de
+              depoimentos na delegacia, inquéritos policiais, bem como ajuizamento de queixa crime e defesas
+              processuais, do início ao fim do processo, com plena competência. </p>
             <button type="button" class="btn btn-outline-success">Saiba Mais</button>
           </li>
         </a>
       </ul>
     </div>
   </div>
-<!--
+
+  <!--loading-1-->
+  <div class="container-loading">
+    <div class="loading">
+      <span style="--i:1"></span>
+      <span style="--i:2"></span>
+      <span style="--i:3"></span>
+      <span style="--i:4"></span>
+      <span style="--i:5"></span>
+      <span style="--i:6"></span>
+      <span style="--i:7"></span>
+      <span style="--i:8"></span>
+      <span style="--i:9"></span>
+      <span style="--i:10"></span>
+      <span style="--i:11"></span>
+      <span style="--i:12"></span>
+      <span style="--i:13"></span>
+      <span style="--i:14"></span>
+      <span style="--i:15"></span>
+      <span style="--i:16"></span>
+      <span style="--i:17"></span>
+      <span style="--i:18"></span>
+      <span style="--i:19"></span>
+      <span style="--i:20"></span>
+    </div>
+  </div>
+
+  <!--loading-2-->
+
+  <div class="container-loading-2">
+    <a href="#">
+      <div class="click-loading">
+        <h3>click</h3>
+      </div>
+      <div class="loading-2">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </a>
+  </div>
+
+  <!--card-border-animation-1-->
+  <div class="card-border-container">
+    <div class="card-border1">
+      <h4 class="card1">Animate Card</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum animi, ullam excepturi maxime delectus ducimus
+        veniam laboriosam nesciunt illo magnam blanditiis quidem itaque officiis porro! Sapiente ex vel itaque
+        distinctio?</p>
+    </div>
+  </div>
+
+
+  <!--text-animation-->
+  <div class="text-animation-container">
+    <div class="text-animation">
+      <h3 class="testeste">texto animado</h1>
+    </div>
+  </div>
+
+
+  <!--card-border-animation-2-->
+  <div class="card-border-container2">
+    <div class="card-border2">
+      <!--text-animation-->
+      <div class="text-animation-container">
+        <div class="text-animation">
+          <h3 class="testeste">texto animado</h1>
+        </div>
+      </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum animi, ullam excepturi maxime delectus ducimus
+        veniam laboriosam nesciunt illo ma Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptates
+        similique nesciunt explicabo est veritatis iusto quod impedit eligendi dignissimos! Officiis qui et quos itaque
+        nam tempora veniam cumque vero?gnam blanditiis quidem itaque officiis porro! Sapiente ex vel itaque
+        distinctio?</p>
+        <button class="button-action1 ">Entre em Contato </button>
+    </div>
+  </div>
+
+  <!--
   <nav class="navbar mt-25 navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" aria-label="Ir para a página inicial">
@@ -178,7 +272,7 @@
     </div>
   </nav>
   End-Navigation-->
-<!--
+  <!--
   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000"
     data-bs-wrap="true">
     <div class="carousel-indicators">
